--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         tree maintenance and removal needs. Whether you're dealing with aging trees, storm damage, or simply want 
         to enhance your outdoor space, our team delivers superior results every time.
     </p>
+<a href="https://damianpap.codeberg.page/shrubremovaleastmont/" target="_blank" rel="noopener noreferrer">https://damianpap.codeberg.page/shrubremovaleastmont/</a>
 
     <p>
         <a href="https://www.peltontreecare.com/">Explore our services</a>
